Fix menu z-index

--- a/deboucled.css
+++ b/deboucled.css
@@ -1331,7 +1331,7 @@ input[type="search"] {
 .deboucled-settings-bg-view {
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 30;
   background: transparent;
   overflow-y: auto;
   position: fixed;
@@ -1343,7 +1343,7 @@ input[type="search"] {
   max-height: calc(100vh - 140px);
   overflow-y: auto;
   position: fixed;
-  z-index: 11;
+  z-index: 31;
   background: var(--deboucled-background-color);
   border-style: solid;
   border-color: dimgray;
